--- a/2022/02/24.md
+++ b/2022/02/24.md
@@ -10,6 +10,8 @@
 
 - ブラインドタッチ
   - 寿司打
+  - <img width="514" alt="スクリーンショット 2022-02-25 0 32 59" src="https://user-images.githubusercontent.com/89694959/155555535-19d59475-6a44-4346-a19d-4fa1ebb9ff36.png">
+
 
 ## 感想
 - Markdown記法とVim操作の両方で、まだやりたい操作を考えながら書いているため、自然と指が動くように慣れるしかないと感じました。
