Add sushida score

--- a/2022/02/25.md
+++ b/2022/02/25.md
@@ -5,9 +5,10 @@
 
 - Web技術基礎
   - 「プロになるためのWeb技術入門」〜LESSON2-2まで読了
-  - メモ：https://vast-drive-704.notion.site/Web-c35f826dd5654c7f83991e60b3f5d89d
+    - メモ：https://vast-drive-704.notion.site/Web-c35f826dd5654c7f83991e60b3f5d89d
 
 - 寿司打
+  - <img width="527" alt="スクリーンショット 2022-02-25 12 50 25" src="https://user-images.githubusercontent.com/89694959/155735948-d98d974a-7eea-4ec8-8fe1-ffe6821a7f4b.png">
 
 ## 感想
 - Vim操作は、未知のものもあるが調べてみて活用できそうなものから少しずつ慣れていきたい。
