Add sishisa score and impression for today

--- a/2022/02/26.md
+++ b/2022/02/26.md
@@ -2,13 +2,13 @@
 - Web技術基礎
   - 「プロになるためのWeb技術入門」〜LESSON3-4読了
   - メモ：https://www.notion.so/Web-c35f826dd5654c7f83991e60b3f5d89d#792718803970494790ed62eba647acb4
-
 - 寿司打
-  - 
+  - <img width="518" alt="スクリーンショット 2022-02-26 23 59 32" src="https://user-images.githubusercontent.com/89694959/155848490-fade824a-44c3-417a-9810-4440af3785b8.png">
 
 ## 感想
-- Web技術基礎書籍を読みながら、HTTP通信の流れとURI/URLを具体的に理解できていない部分を知ることが出来た。
-  - 特に、クエリ文字列の部分で?はURIでの予約文字列だと初めて知った。
+- Web技術基礎書籍を読みながら、HTTP通信の流れとURI/URLを具体的に理解できていない部分を知ることが出来た。特に、クエリ文字列の部分で?はURIでの予約文字列だと初めて知った。
+- TCP/IP通信やポート番号の部分は、現職での経験や知識から、理解がスムーズにできたと思う。
+  - ポート番号は、かつて「病院や郵便局の受付の窓口」という比喩で覚えた。
 
 ## 学習時間 
 - 今日: 2.0h
