--- a/2022/02/27.md
+++ b/2022/02/27.md
@@ -4,6 +4,8 @@
     - https://vast-drive-704.notion.site/Web-526d170f57314936a746a2b3bf96d6cb
 
   - 寿司打
+  - <img width="529" alt="スクリーンショット 2022-02-27 21 09 28" src="https://user-images.githubusercontent.com/89694959/155886746-a5d9a06e-98b2-4879-a44c-fe481c902926.png">
+
 
 - 感想
 
