--- a/2022/03/02.md
+++ b/2022/03/02.md
@@ -2,10 +2,11 @@
 - プロになるためのWeb技術入門 ~4-5読了
   - メモ:https://www.notion.so/Web-c35f826dd5654c7f83991e60b3f5d89d#397f2164de364abaa657999cfa10fdb6
 - 寿司打
-  - 
+  - <img width="523" alt="名称未設定" src="https://user-images.githubusercontent.com/89694959/156397406-07d8b9ed-1720-431e-846e-ad2a27f69288.png">
 
 ## 感想
 - 上記書籍を読み進める中で、遂にステートフル・ステートレスやCookieなどが登場しました。特にセッションについては、自分の認識と少し異なっていたので、今日読んだ部分のメモと書籍内容を参考にしながら、引き続き課題を進めていきたいと思います。
+- 寿司打の高級コースを試しにやってみましたが、なかなか難しいですね。。。w
 
 ## 学習時間
 - 今日:  2.5h
