--- a/2022/03/06.md
+++ b/2022/03/06.md
@@ -4,7 +4,7 @@
 - [Web技術の基本について課題(下書き)](https://vast-drive-704.notion.site/Web-526d170f57314936a746a2b3bf96d6cb)
 
 ## 感想
-今日は、Web技術基本の課題を提出間際まで作成できました
+今日は、Web技術基本の課題を提出間際まで作成できました。
 
 SSLの仕組みを厳密に理解することはまだ難しい段階です。しかし、ざっくりとどんな流れで暗号化しているか把握できるようになったと実感します。
 
