--- a/2022/03/08.md
+++ b/2022/03/08.md
@@ -7,7 +7,8 @@
 
 VirtualBox上でCentOS環境構築をする際に、OSインストール後に再起動をしても、再度インストール画面に戻ってしまい早速躓きました...笑
 
-原因は、インストール後もISOイメージファイルの接続を解除しないことにより、ISOを参照し続けていたからでした。
+原因を調べてみたところ、下記記事が参考になりそうだったので明日やってみようかと思います。
+https://qiita.com/M0304/items/77a449163257937b2be6
 https://qiita.com/KANTU/items/0cf39aacdecc48cda4e2#centos%E3%81%AE%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E3%81%8C%E4%B8%8A%E6%89%8B%E3%81%8F%E3%81%84%E3%81%8B%E3%81%AA%E3%81%84
 
 一旦は、MacBookのターミナルを使って講座を進めました。また、実務で活用しているコマンドの部分は軽く飛ばしています。明日は、CentOSも使いながら進めてみたいと思います！
