--- a/2022/03/09.md
+++ b/2022/03/09.md
@@ -2,6 +2,8 @@
 - Udemy
   - もう怖くないLinuxコマンド：受講完了
   - もう怖くないGit：セクション3 「ファイルの削除」まで
+- 寿司うち
+  - <img width="517" alt="20220309" src="https://user-images.githubusercontent.com/89694959/157461990-dcc91e5e-b44f-491e-921d-266800eae779.png">
 
 ## 感想
 今日はUdemyのLinuxコマンド講座の受講を終了し、Git講座に着手できました。
