--- a/2022/03/10.md
+++ b/2022/03/10.md
@@ -3,7 +3,7 @@
   - もう怖くないGit：セクション3〜6
 
 ## 感想
-今日はGitコマンド講座を進め、残り40%までとなりました！
+今日はGitコマンド講座を進め、残り40%となりました！
 
 これまでgit pullしか使用したことがなかったので、git fetchでリモートリポジトリの情報を取得・反映する仕組みが難しく感じました。
 
