--- a/2022/03/14.md
+++ b/2022/03/14.md
@@ -4,7 +4,7 @@
 ## 感想
 今日からWeb開発の基礎学習に着手しました！
 
-演習では、VSCodeでVim操作しながらhtmlを書いていますが、以前よりVimに慣れてきたなと実感しました。（チートシートを見ながら、行頭から行末までをコピペなど）
+演習では、VSCodeでVim操作しながらhtmlを書いていますが、以前よりVimに慣れてきたなと実感しました。（チートシートを見ながら、だいぶゆっくりですが。。。w）
 
 また、html学習はProgate以来なので、良い復習の機会になればと思います。
 
