--- a/2022/03/18.md
+++ b/2022/03/18.md
@@ -1,12 +1,12 @@
 ## 今日やったこと
- - Udemy:ウェブ開発入門完全攻略コース セクション12~15 Ruby入門真偽値まで 完了
+ - Udemy:ウェブ開発入門完全攻略コース セクション12~15：Ruby入門 真偽値まで完了
 
 ## 感想
 JavaScript編を終了し、ようやくRuby編に着手しました。
 
-Ruby入門セクションでは、インクリメント・デクリメントでは++/-- を用いない等、JavaScriptと異なる点を完全に忘れていたので思い出す良い機会となりました。
+Ruby入門セクションでは、インクリメント・デクリメントで++/-- を用いない等、JavaScriptと異なる点を完全に忘れていたので思い出す良い機会となりました。
 
-明日のミートアップ楽しみです!
+明日のミートアップ楽しみです！
 
 ## 学習時間
 - 今日：3.5h
