--- a/2022/03/20.md
+++ b/2022/03/20.md
@@ -4,9 +4,9 @@
 - Udemy:ゼロから教えるDocker 準備編まで
 
 ## 感想
-Web開発入門コースの全講座受講が完了しました。Ruby/Railsセクションでは、少しづつMVCの役割を踏まえながらコードを考え・読むことができるようになってきたと感じました。
+Web開発入門コースの全講座受講が完了しました。Ruby/Railsセクションでは、少しずつMVCの役割を踏まえながらコードを考え・読むことができるようになってきたと感じました。
 
-講座内のタスク管理アプリ作成は、CRUD操作の基本となる内容だったので、今後の学習でインデックスとなれば良いなと思います。
+講座内のタスク管理アプリ作成は、CRUD操作の基本となる内容だったので、今後の学習でインデックスになれば良いなと思います。
 
 お次はdockerです。重そうな内容ですが、焦らず進めていきます！
 
