--- a/2022/04/22.md
+++ b/2022/04/22.md
@@ -1,5 +1,6 @@
 ## 今日やったこと
 - Qiita記事作成・投稿
+  - [Rails\+docker環境構築でyarnが上手くインストールできない \- Qiita](https://qiita.com/yyy_muu/items/6d92c5a1b3ee4a5bd5b9)
 
 ## 感想
 docker課題をやっていた際に、個人的に結構躓いた内容についてアウトプットしました。
