--- a/2022/04/23.md
+++ b/2022/04/23.md
@@ -1,5 +1,6 @@
 ## 今日やったこと
 - Rubyチェリー本 第7.4章 途中まで
+  - [まとめ](https://www.notion.so/Ruby-77f15cf0d73944bf8345fbd688a71424#99e198505f274c939b39d78dd5c7dbfc)
 
 ## 感想
 改札機プログラムの例題に着手してみて、シンプルですがクラスを使う内容なので、本格的になってきたな〜と感じました。
