--- a/2022/05/01.md
+++ b/2022/05/01.md
@@ -4,7 +4,7 @@
 ## 感想
 3人ずつに分割するまではあまり迷わずに考えられましたが、2人+4人に分ける部分はやはり難しいですね。。
 
-該当しそうなメソッドなどは見つけられましたが、それをヒントに期待する出力にするにはもう少し工夫しながらやってみたいと思いました。
+該当しそうなメソッドなどは見つけられましたが、それをヒントに期待する出力結果までの処理を考えてみようと思いました。
 
 やってみて時間がかかりそうなら、チェリー本に戻って読み進めようと思います！
 
