--- a/2022/05/08.md
+++ b/2022/05/08.md
@@ -1,7 +1,7 @@
 ## 今日やったこと
 - Ruby グループ分け課題  
 - Rubyチェリー本 第8.6章まで
-  - [まとめ](#https://www.notion.so/Ruby-77f15cf0d73944bf8345fbd688a71424#b6b5bdef7f9b4be5bc6b7029acc4a2b6)
+  - [まとめ](https://www.notion.so/Ruby-77f15cf0d73944bf8345fbd688a71424#b6b5bdef7f9b4be5bc6b7029acc4a2b6)
 
 # 感想
 グループ分け課題で無事LGTMをもらうことができ何よりです。。
