--- a/2022/05/17.md
+++ b/2022/05/17.md
@@ -4,7 +4,7 @@
 # 感想
 コマンドライン引数で月を指定して実行できる部分まで完成できました。
 
-逆に、引数を指定しない場合の処理を書いておらず、そのまま実行したら案の定エラーになったので、明日また修正していきます！
+逆に、引数を指定しない場合の条件分岐を書いておらず、引数なしで実行したら案の定エラーになったので、明日また修正していきます！
 
 ## 学習時間
 - 今日:2.5h
