--- a/2022/05/23.md
+++ b/2022/05/23.md
@@ -1,5 +1,6 @@
 ## 今日やったこと
 - Rubyチェリー本 8~10.3章まで
+  - [まとめ](https://www.notion.so/Ruby-77f15cf0d73944bf8345fbd688a71424#74e6e3fc23944d5faad5a4e5c7a74b3e)
  
 # 感想
 チェリー本の例外処理の章を読み、エラー発生した際によく見ていたメッセージも例外クラスのオブジェクトだと知り驚きました。
