--- a/2022/05/27.md
+++ b/2022/05/27.md
@@ -4,7 +4,7 @@
 # 感想
 チェリー本で解いた例題を思い出しながらやることで、以前よりもテストの書き方やクラスとインスタンスの扱い方を理解しやすくなってきたと実感しました。
 
-なんとなく見ながらコードを書く状態から、自力で考えて書く力をもっと身につけたいなと思います。
+なんとなく見ながらコードを書く状態から、もっと自力で考えて書く力を身につけた状態になりたいなと思います。
 
 ## 学習時間
 - 今日:3.0h
