--- a/2022/06/11.md
+++ b/2022/06/11.md
@@ -2,7 +2,7 @@
 - Ruby 自販機課題 
  
 # 感想
-テストを書きながら、ただ通るだけでなく、そのテストが何を検証するためか？を考慮したメソッド名を書く勉強になるなと思いました！
+テストを書くことを通じて、テストが通ることのみならず、何を検証するためか？を考慮したメソッド名を書く勉強になるなと思いました！
 
 ## 学習時間
 - 今日:3.0h
