--- a/2022/07/09.md
+++ b/2022/07/09.md
@@ -4,7 +4,7 @@
 # 感想
 redisコンテナを作成するところまでは上手く行きましたが、肝心のジョブ実行の部分でredis-serverが意図した挙動をしないところで詰まりました。。
 
-ただ、bundle exec sidekiqコマンドを結果が面白かったですw
+ただ、bundle exec sidekiqコマンド結果が面白かったですw
 
 ## 学習時間
 - 今日:6.0h
