--- a/2022/07/17.md
+++ b/2022/07/17.md
@@ -2,7 +2,7 @@
 - Rails課題 ログイン周り 
  
 # 感想
-ログイン、サインイン機能とviewがようやく出来上がってきて嬉しいです。単純ですが、レイアウトが整うと少しの調整でも見やすくなるんだなと思いました。
+ログイン、サインアップ機能とviewがようやく出来上がってきて嬉しいです。単純ですが、レイアウトを整えると少しの調整でも見やすくなるんだなと思いました。
 
 また、画面遷移も上手くいくと、自分でもこういう機能作れるようになったんだなと実感できて嬉しいです。
 
