--- a/2022/07/28.md
+++ b/2022/07/28.md
@@ -3,9 +3,9 @@
  
 # 感想
 ツイート機能を実装できていたと思っていましたが、user_idやtweet_idが保存されていて、肝心の投稿内容が保存されていない状態になっていました。。
-ググってみましたが、参考になりそうな情報が少なかったので該当しそうな部分を一つ一つ再確認してみようと思います。
+参考になりそうな情報が少なかったので、該当しそうな部分を一つ一つ再確認してみようと思います。
 
-DBへの渡し方に問題がありそうなので、明日また調べて改修したいと思います。
+Unpermitted parameter:エラーが出ており、DBへの渡し方に問題がありそうなので、明日また調べて改修したいと思います。
 
 ## 学習時間
 - 今日:5.0h
