--- a/2022/08/01.md
+++ b/2022/08/01.md
@@ -6,8 +6,7 @@
 Rails課題の、気になるけど後回しにしていたCSSや細かい箇所を修正しました。
 特にCSSは、viewを微調整するうちに増えていった部分が多く、今後他の要素への影響を少なくできるよう書いていきたいなと思いました。
 
-電車移動時間にJavaScript Udemy講座を進めてみましたが、進むにつれて、皆さんのおっしゃる通り難しいですね。。
-
+電車移動時間にJavaScript Udemy講座を進めてみましたが、皆さんのおっしゃる通り、進むにつれてどんどん難しくなっていきますね。。
 全部を理解するのはまだ厳しいですが、ひとまずざっくりポイントを抑えたいと思います。
 
 ## 学習時間
