--- a/2022/08/10.md
+++ b/2022/08/10.md
@@ -5,7 +5,7 @@
 # 感想
 コメント作成セクションを無事LGTMいただいたので、画像アップロードセクションも進めました。
 
-現状は既にActiveStorageテーブルに保存されているか、デフォルト画像を表示していますが、プレビューなどもあっても面白そうだなと思いました。
+現状は既にActiveStorageテーブルに保存されている画像か、デフォルト画像を表示していますが、プレビューなどもあっても面白そうだなと思いました。
 
 ## 学習時間
 - 今日:2.5h
