--- a/2022/08/15.md
+++ b/2022/08/15.md
@@ -5,7 +5,7 @@
 # 感想
 画像アップロードセクションでレビューしていただいた箇所の修正を進めました。
 
-画像以外の拡張子のファイルがアップロードさせない制限機能は、普段自分が使うサービスにもよく実装されていますが、
+画像以外の拡張子のファイルアップロードの制限機能は、普段自分が使うサービスにもよく実装されていますが、
 自分で実装するとなると盲点だったなと実感しました。
 
 一方で、実装例をGithub上のRailsソースコードを参考にしながらできたので、以前より調べる力がついてきたなとも実感しました。
