--- a/2022/08/22.md
+++ b/2022/08/22.md
@@ -2,7 +2,7 @@
 - Rails課題 githubログインセクション
 
 # 感想
-Rails課題の画像あっップロードセクションのLGTMをいただいたので、Githubログインセクションを進めました。
+Rails課題の画像アップロードセクションのLGTMをいただいたので、Githubログインセクションを進めました。
 
 deviseのwikiに記載のFacebook連携の例を参考に実装し、無事ログインできる状態になり嬉しいです。
 
