--- a/2022/10/17.md
+++ b/2022/10/17.md
@@ -4,11 +4,11 @@
   - テストコード作成
 
 # 感想
-ユーザフォローセクションを無事LGTMいただいたので、ようやくテストコードの作成に着手しました。
+ユーザフォローセクションを無事LGTMいただいたので、ようやくテストコードに着手しました。
 
-viewに記載するRubyコードでは、テキストのベタ書きは避けてメソッドを用いて表示する方法は、今後他のアプリを開発する際も活用できるなと感じました。
+viewに記載するRubyコードは、テキストのベタ書きは避けてメソッドで取得・表示する方法は、今後他のアプリを開発する際も活用できるなと感じました。
 
-テストを書くのは自販機課題依頼なので、復習も兼ねて進めようと思います。主要機能と検証したい項目のリストアップを大まかに挙げたので、それらを基に書いていきます。
+テストを書くのは自販機課題以来なので、復習も兼ねて進めようと思います。主要機能と検証したい項目を大まかに挙げたので、それらを基に書いていきます。
 
 ## 学習時間
 - 今日:2.5h
