--- a/2022/10/29.md
+++ b/2022/10/29.md
@@ -1,13 +1,14 @@
 ## 今日やったこと
-- js-primer 第一部：ブジェクト〜あkん数とthisまで
+- Rails課題　完了
+- js-primer 第一部：オブジェクト〜関数とthis　まで
 
 # 感想
 Rails課題のLGTMをいただき、ようやく完了しました！自分で色々調べながら進めたり、つまったりで3ヶ月かかりましたが、最後まで出来てよかったです。
 
 課題を通して、RubyとRailsの基本的な書き方やRSpecでのテストなど全体を学ぶことができたと実感しています。
 
-次はようやくフロントエンド学習に入るので、引き続き頑張ります！
+次はフロントエンド学習を引き続き頑張ります！
 
 ## 学習時間
-- 今日:2.5h
-- 累計:602.5h
+- 今日:3.0h
+- 累計:603.0h
