--- a/2022/10/31.md
+++ b/2022/10/31.md
@@ -7,7 +7,7 @@
 
 js-primerを読んでみて、チェリー本などを読んでいた頃よりもプログラミングの基礎構文や考え方ができるようになったなと実感しました。
 
-一方で、javaScript固有の内容はまだ理解が浅いので、課題をやりながら身に付けていきたいです。
+一方で、JavaScript固有の内容はまだ理解が浅いので、課題をやりながら身に付けていきたいです。
 
 カレンダー課題は、Rubyの同課題を参考にして進めることが出来ました。変数名の付け方やアロー関数など、学べることはまだまだたくさんありますね！
 
