--- a/2022/11/01.md
+++ b/2022/11/01.md
@@ -4,7 +4,7 @@
 ## 感想
  To Doリスト課題に着手しました。
 
-Figmaw用いて、要件を落とし込んだ画面イメージ図の作成まで進めたので、明日からはそれを基に本格的にコードを書いていきたいと思います！
+Figmaを用いて、要件を落とし込んだ画面イメージ図の作成まで進めたので、明日からはそれを基に本格的にコードを書いていきたいと思います！
 
 ## 学習時間
 - 今日:2.0h
