--- a/2022/11/07.md
+++ b/2022/11/07.md
@@ -2,7 +2,7 @@
 - JavaScript ToDo List課題
 
 ## 感想
-タスクを削除した際、全タスク数を更新する部分ま出来ました。
+タスクを削除した際、全タスク数を更新する部分まではひとまず出来ました。
 
 一方で、タスクステータスに応じて未完了・完了済みタスクの数を更新する部分に苦戦しているので、
 明日も引き続き進めてみたいと思います。
