--- a/2022/11/22.md
+++ b/2022/11/22.md
@@ -7,7 +7,7 @@ Udemy講座の受講を進めつつ、インプットが多くなってきたの
 
 実際にAPIを叩いてデータを取得することで、async/awaitとfetchの基本的な使い方が理解できました。
 
-一方で、取得したJSONデータの扱い方がまだ理解できていないので、次はその点を調べてながら課題を進めたいと思います。
+一方で、取得したJSONデータの扱い方がまだ理解できていないので、次はその点を調べながら課題を進めたいと思います。
 
 ## 学習時間
 - 今日:2.5h
