--- a/2022/11/27.md
+++ b/2022/11/27.md
@@ -2,17 +2,17 @@
 - JavaScript ワインリスト課題
 
 ## わかったこと
-- column-countで対象要素を列数指定で表示できるが、グリッドレイアウトを用いると柔軟に配置制御できる
-- onloadを用いて、読み込み時にデフォルトで呼び出したい関数をイベント登録できる
+- オブジェクトのプロパティ名が値として指定する変数名と同じ場合、省略して記載できる
 
 ## 次やること
 - 各ワインリストの描画時、類似処理が発生する部分をリファクタリングする
+  - 各ワインリストのデータをオブジェクトにし、更に1つのオブジェクトに格納してみる
 
 ## 感想
-各ワインに応じて、ボタンクリックでAPIで取得したデータをリスト表示する部分の実装までできました。
+各ワインリストデータをオブジェクトに格納し、描画する際に各変数として取り出すように実装したいのですが、なかなか難しいです。
 
-一方で、取得データを描画する際に同様の処理が発生するので、変数か何かを使って重複コードを減らしたいです。
+予めプロパティ名を設定した空のオブジェクトを用意し、再代入を試みていますが上手く出来ないので、明日またやってみようと思います。
 
 ## 学習時間
-- 今日:5.0h
-- 累計:649.5h
+- 今日:3.0h
+- 累計:652.5h
