--- a/2022/12/18.md
+++ b/2022/12/18.md
@@ -10,11 +10,13 @@
 - React上級課題:Udemy Reactアプリ開発に着手する
 
 ## 感想
+2日分の日報です。
+
 React ToDoList課題のレビュー依頼まで進みました。
 
 useStateやuseEffect, useRefなどのフックの、それぞれの違いを理解する部分が難しいなと感じました。
 しかし、実際に使って試してみることで、挙動が分かるようになってきたなと思います。
 
 ## 学習時間
-- 今日:1.5h
-- 累計:696.0h
+- 今日:8.0h
+- 累計:704.0h
