--- a/2023/01/27.md
+++ b/2023/01/27.md
@@ -10,10 +10,10 @@
 - ReactにTypeScript導入課題、TypeScriptとReact/Next.js開発本を読み進める
 
 ## 感想
-分かったこと・次やることを日報に記載することを前提で学習することで、何か1つでも学ぼうと意識して学習を進められるので、HC卒業後でもできるだけ学習記録をつけたいと思います。
+分かったこと・次やることを日報に記載することを前提に学習すると、何か1つでも学ぼうと意識して進められるので、HC卒業後もできるだけ学習記録をつけたいと思います。
 
-今日は、まだ未着手だった課題を進めるにあたり、ロードマップの書籍やUdemyでTypeScriptの基礎知識を復習しました。
-テキストだけの仕様を元にゼロから構築する力がまだまだ足りないなと感じます。
+今日は、未着手だった課題を進めるにあたり、ロードマップの書籍やUdemyでTypeScriptの基礎知識を復習しました。
+テキストだけの仕様を元に、ゼロから構築する力が足りないなと感じました。
 
 明日は復習内容を踏まえて、少しずつ課題を進めてみようと思います。
 
